--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         }
                     }
                     var y3 = y1 + r1.size.y * 0.5 + 0.01;
-                    if(y3 < r1.position.y) r1.position.y = y1 + r1.size.y * 0.5;
+                    if(y3 < r1.position.y) r1.position.y = y3;
 
                 } else if(r1.velocity.y > 1) {
                     var y0 = r1.position.y + r1.size.y * 0.5;
